@@ -1,3 +1,8 @@
+2000-01-03  Jim Kingdon  <http://developer.redhat.com/>
+
+	* sanity.sh (clean): Test the contents of the .#cleanme.txt.1.1
+	file, not just its existence.
+
 2000-01-03  Karl Fogel  <kfogel@red-bean.com>
 
 	* cvs.h, filesubr.c (backup_file): use `const' for suffix too;
